@@ -1,5 +1,9 @@
 This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.
 
+2002-03-20 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
+	* include/log4cpp/SimpleConfigurator.hh, src/SimpleConfigurator.cpp:
+	added configure(std::istream&) method. (feature request #527760)
+
 2002-03-17 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* tests/testbench.cpp: added missing 'std::' specifiers. (bug #530332)
 
